syntax = "proto3";

package HighScores;

service HighScores {
    rpc AddHighScore(HighScore) returns (AddHighScoreResponse) {}
}

message HighScore {
    string id = 1;
    string username = 2;
    int32 score = 3;
    int64 timestamp = 4;
}

message AddHighScoreResponse {
    HighScore inserted = 1;
    repeated string errors = 2;
}
